src/css/dark_theme/general.less
:root {
  color-scheme: dark;
}

/* seems to not be used, and cause a white flash */
#topbar.newbgastyle {
  display: none;
}

.bg-white {
  background-color: var(--dark-10);
  color: var(--light-70);
}

.hover\:bg-bga-gray-211:hover {
  background-color: var(--dark-10);
}

.hover\:bg-bga-gray-171:hover,
.hover\:bg-gray-300:hover {
  background-color: var(--dark-20);
}

.hover\:bg-bga-gray-233:hover {
  background-color: var(--dark-30);
}

.text-bga-gray-78 {
  color: var(--light-70);
}

.text-gray-500,
.text-bga-gray-800,
.text-bga-game-private-alpha {
  color: var(--light-50);
}

.text-bga-blue {
  color: var(--blue-80);
}

.text-red-500,
.text-red-800,
.text-red-700,
.beta_label {
  color: var(--red-80);
}

.text-bga-link-red {
  color: var(--red-80) !important;
}

.bga-page-section__title,
.bga-page-section h2.text-bga-blue {
  color: var(--light-70) !important;
}

.bg-bga-gray-211 {
  background: var(--dark-20);
}

.bg-bga-gray-211 .text-gray-600 {
  color: var(--light-80);
}

.bg-bga-gray-233 {
  background-color: var(--dark-10);
}

.bg-bga-gray-244 {
  background-color: var(--dark-20);
}

.bg-bga-gray-204 {
  background-color: var(--dark-40);
}

.bg-bga-link {
  background-color: var(--blue-70);
}

.male {
  color: var(--blue-80);
}

.bga-menu-bar__logo-holder svg {
  filter: drop-shadow(0px 0px 4px #fff8) var(--ext-bright);
}

.terms-and-conditions-container {
  border-color: var(--dark-40) !important;
}

.loading_icon,
#loading,
#overall_loading,
.bga-loading-indicator__img,
#waiting_image,
#tablechatlog img,
img[alt="loading"] {
  filter: invert(0.7) grayscale(1);
}

.emblempremium_big {
  filter: var(--ext-bright);
}

.whiteblock {
  background-image: none;
  background-color: var(--dark-20);
}

.bga-radiobox__control {
  --background-color: #4f8fe3;
  --check-color: var(--blue-80);
  --background-color-faded: #4f8fe380;
}

.bga-button,
.bgabutton {
  text-shadow: -1px -1px #0004, 1px 1px #0004, -1px 1px #0004, 1px -1px #0004;
}

.bgabutton_blue:not(.disabled):not(:disabled) {
  background: linear-gradient(180deg, #0ba9b7, #248189) !important;
}

.bgabutton_blue:not(.disabled):not(:disabled):hover {
  background: linear-gradient(180deg, #06d7ea, #248189) !important;
}

.bgabutton_blue:not(.disabled):not(:disabled):active {
  background: linear-gradient(180deg, #248189, #0ba9b7) !important;
}

.bgabutton_blue.disabled {
  background: linear-gradient(180deg, #0ba9b7, #248189) !important;
  filter: brightness(0.3) !important;
}

.bgabutton_gray,
.bga-button--gray {
  background: linear-gradient(#606060, #777) !important;
  color: #fff !important;
}

.bgabutton_gray:hover,
.bga-button--gray:hover {
  background: linear-gradient(180deg, #727272, #777) !important;
}

.bga-button--red:not(.disabled) {
  background: linear-gradient(180deg, #db661f, #84461f) !important;
}

.bga-button--red:not(.disabled):hover {
  background: linear-gradient(180deg, #ff8e47, #84461f) !important;
}

.bga-button--green:not(.disabled) {
  background: linear-gradient(180deg, #0bb76c, #24895d) !important;
}

.bga-button--green:not(.disabled):hover {
  background: linear-gradient(180deg, #06ea87, #24895d) !important;
}

.copy_display {
  background-color: var(--dark-20);
  border-color: var(--light-50);
}

#copy_content {
  color: var(--light-70);
}

/* Formulaires */
input,
input:focus,
textarea,
select {
  color-scheme: dark;
  background: var(--dark-30);
  color: var(--light-80) !important;
  border: 1px solid #b3b3b3;
}

textarea:focus,
input:focus,
select:focus,
.bga-game-selector:focus {
  outline: none;
  border: 1px solid #fff;
}

textarea::placeholder,
input::placeholder {
  color: #b3b3b3;
}

.bga-textfield {
  background-color: var(--dark-40) !important;
  color: var(--light-80);
}

.bga-checkbox {
  background-color: transparent;
}

.bga-checkbox:not(.bga-checkbox--disabled) .bga-checkbox__checkbox {
  background-color: var(--light-50) !important;
}

.bga-checkbox:not(.bga-checkbox--disabled):hover .bga-checkbox__checkbox {
  background-color: var(--blue-90) !important;
}

.bga-checkbox.bga-checkbox--checked:not(.bga-checkbox--disabled) .bga-checkbox__checkbox {
  background-color: var(--blue-70) !important;
}

.bga-checkbox--checked .bga-checkbox__checkbox .bga-checkbox__checkmark {
  color: var(--light-80) !important;
}

textarea#reviewcomment {
  background: var(--dark-30) !important;
}

.border-none {
  border-style: none !important;
}

.tundra .dijitSelectFocused,
.tundra .dijitTextBoxFocused,
.tundra .dijitSelectFocused TD,
.tundra .dijitTextBoxFocused .dijitButtonNode,
.tundra .dijitDialog,
.tundra .dijitTooltipContainer,
.tundra .dijitMenu,
.tundra .dijitMenuBar,
.tundra .dijitSelectFocused TD,
.tundra .dijitTextBoxFocused .dijitButtonNode,
.tundra .dijitButtonActive .dijitButtonNode,
.tundra .dijitButtonContentsActive,
.tundra .dijitDownArrowButtonActive,
.tundra .dijitDropDownButtonActive .dijitButtonNode,
.tundra .dijitStackController .dijitToggleButtonChecked .dijitButtonNode,
.tundra .dijitToggleButtonActive .dijitButtonNode,
.tundra .dijitUpArrowButtonActive .dijitColorPalette {
  border-color: #fff;
}

.dj_webkit .tundra .dijitTooltipContainer {
  box-shadow: 0 5px 10px #555;
}

.dijitTooltipContainer .imgtext[src$="/img/layout/help_click.png"] {
  filter: invert(0.7);
}

.tundra .dijitButtonHover .dijitButtonNode,
.tundra .dijitButtonNodeHover,
.tundra .dijitComboButton .dijitButtonContentsHover,
.tundra .dijitComboButton .dijitDownArrowButtonHover,
.tundra .dijitDropDownButtonHover .dijitButtonNode,
.tundra .dijitToggleButtonHover .dijitButtonNode,
.tundra .dijitSelectHover,
.tundra .dijitSelectHover TD,
.tundra .dijitComboBoxHighlightMatch {
  border-color: #fff;
}

.tundra .dijitSelectHover,
.tundra .dijitSelectHover TD {
  background: none;
  border-color: #fff !important;
}

.tundra .dijitSelectActive,
.tundra .dijitSelectActive TD,
.tundra .dijitSelectOpened,
.tundra .dijitSelectOpened TD {
  border-color: #fff !important;
}
/* ... */

